--- a/style.css
+++ b/style.css
@@ -6,9 +6,14 @@ body { pointer-events: none; }
 
 */
 
-h1 {
-  font-family: sans-serif;
-  color: green;
+body {
+  overflow: hidden;
 }
 
+img {
+  height: 200px;
+}
 
+#dog {
+  position: absolute;
+}
